# agent-turn-network-plugin

./: .gitignore  .kkachi-workflow.yaml  AGENTS.md  Makefile  README.md  __init__.py  plugin.yaml  pyproject.toml
.claude/: kkachi-agent-bridge.managed.json  settings.local.json
docs/: 00-overview.md  01-architecture.md  02-plugin-contract.md  03-testing-strategy.md  04-tooling.md  05-discord-surface.md  06-implementation-epics-tasks.md  06-implementation-epics.md  07-core-compatibility.md  08-unsupported-surfaces.md  09-skill-and-operator-guide.md  10-live-transport-sot.md  11-council-argument-graph-sot.md  12-hermes-unified-network-plugin-naming-sot.md  13-agent-turn-network-plugin-naming-sot.md  README.md  kkachi-docs-map.yaml  roadmap.md
docs/adr/: README.md
docs/evidence/: 2026-06-25-runfix3-002-guidance-hardening-evidence.md  2026-06-26-runfix3-003-planner-proof-evidence.md  ltran-003-plugin-equivalence-evidence.json  partc-001-participant-plugin-evidence.json  partc-002-selected-participant-response-evidence.json
docs/spec/: README.md  agent-turn-network-plugin-naming-sot.md  architecture.md  compatibility-and-operations.md  council-argument-graph-sot.md  live-transport-sot.md  skill-and-operator-guide.md
docs/todo/: README.md
scripts/: check_bootstrap_smoke.py  check_core_contract.py  check_make_contract.py  check_plugin_load_smoke.py  guardrails.py
src/atn_plugin/: __init__.py  activation_planner.py  discord_surface.py  protocol.py  schemas.py  surface_rendering.py  tools.py
src/hermes_unified_network_plugin/: __init__.py  activation_planner.py  errors.py  protocol.py  schemas.py  surface_rendering.py  tools.py
src/kkachi_agent_network_plugin/: __init__.py  activation_planner.py  conformance.py  errors.py  protocol.py  schemas.py  surface_rendering.py  tools.py
tests/e2e/: test_discord_surface_no_live.py  test_no_live_daemon_fallback.py  test_scaffold.py
tests/integration/: test_cndis_conformance.py  test_deleg_002_conformance.py  test_delegate_plugin_tools.py  test_discord_surface.py  (+5 more)
(+60 files in other folders)
