[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kkachi-agent-network-plugin"
dynamic = ["version"]
description = "Hermes plugin scaffold for kkachi-agent-network."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16",
    "pytest>=8.4",
    "pyyaml>=6.0.3",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kkachi_agent_network_plugin"]

[tool.hatch.version]
path = "src/kkachi_agent_network_plugin/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
include = ["__init__.py", "src/**/*.py", "tests/**/*.py"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "src"
packages = ["kkachi_agent_network_plugin"]
