[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-unified-network-plugin"
dynamic = ["version"]
description = "Hermes plugin adapter for Hermes Unified Network fake/injected tools and bundled HUN operator guidance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16",
    "pytest>=8.4",
    "pyyaml>=6.0.3",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_unified_network_plugin"]

[tool.hatch.version]
path = "src/hermes_unified_network_plugin/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
include = ["__init__.py", "src/**/*.py", "tests/**/*.py"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
mypy_path = "src"
packages = ["hermes_unified_network_plugin"]
